rendered/envs/friclu/syncthing/service-syncthing-discovery.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/version: 1.23.5
    helm.sh/chart: syncthing-4.0.0
  name: syncthing-discovery
  namespace: syncthing
spec:
  externalTrafficPolicy: Local
  ports:
    - name: discovery
      port: 21027
      protocol: UDP
      targetPort: 21027
  selector:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/name: syncthing
  type: NodePort
