rendered/envs/friclu/syncthing/service-syncthing-listen.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/version: 1.23.5
    helm.sh/chart: syncthing-4.0.0
  name: syncthing-listen
  namespace: syncthing
spec:
  externalTrafficPolicy: Local
  ports:
    - name: listen
      port: 22000
      protocol: TCP
      targetPort: 22000
  selector:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/name: syncthing
  type: NodePort
