rendered/envs/friclu/syncthing/ingress-syncthing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: syncthing
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/version: 1.23.5
    helm.sh/chart: syncthing-4.0.0
  name: syncthing
  namespace: syncthing
spec:
  ingressClassName: nginx
  rules:
    - host: sync.duchardt.net
      http:
        paths:
          - backend:
              service:
                name: syncthing
                port:
                  number: 8384
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sync.duchardt.net
      secretName: syncthing-certificate
